using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class BossAnimationParameters : ScriptableObject
{
    static public string SpeedParameter = "Speed";
    static public string DirectionalInputParameter = "DirectionalInput";
    static public string FallingParameter = "IsFalling";
    static public string LandingParameter = "IsLanding";
    static public string HurtParameter = "IsHurt";
    static public string HammerAttackParamater = "IsAttacking";
    static public string DeathParameter = "IsDead";
}
