using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class DroneAnimationParameters : MonoBehaviour
{
    static public string SpeedParameter = "Speed";
    static public string DirectionalInputParameter = "DirectionalInput";
    static public string FallingParameter = "IsFalling";
    static public string LandingParameter = "IsLanding";
    static public string HurtParameter = "IsHurt";
    static public string Attack1Parameter = "IsAttacking";
    static public string DeathParameter = "IsDead";
}
